--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,7 +76,7 @@
               {% if site.author.instagram_username %}
               <!-- Facebook -->
               <li class="navigation__item">
-                <a href="https://www.instagram.com/{{ site.author.facebook_username }}"
+                <a href="https://www.instagram.com/{{ site.author.instagram_username }}"
                   title="{{ site.author.instagram_username }} on Instagram" target="_blank">
                   <i class="icon icon-social-instagram"></i>
                   <span class="label">Instagram</span>
