--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,13 +29,24 @@
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
 
-              {% if site.author.twitter_username %}
-              <!-- Twitter -->
+              {% if site.author.github_username %}
+              <!-- GitHub -->
               <li class="navigation__item">
-                <a href="http://twitter.com/{{ site.author.twitter_username }}"
-                  title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
-                  <i class="icon icon-social-twitter"></i>
-                  <span class="label">Twitter</span>
+                <a href="https://www.github.com/{{ site.author.github_username }}"
+                  title="{{ site.author.github_username }} on GitHub" target="_blank">
+                  <i class="icon icon-social-github"></i>
+                  <span class="label">GitHub</span>
+                </a>
+              </li>
+              {% endif %}
+
+              {% if site.author.instagram_username %}
+              <!-- Instagram -->
+              <li class="navigation__item">
+                <a href="https://www.instagram.com/{{ site.author.instagram_username }}"
+                  title="{{ site.author.instagram_username }} on Instagram" target="_blank">
+                  <i class="icon icon-social-instagram"></i>
+                  <span class="label">Instagram</span>
                 </a>
               </li>
               {% endif %}
@@ -51,6 +62,27 @@
               </li>
               {% endif %}
 
+              {% if site.author.email %}
+              <!-- Email -->
+              <li class="navigation__item">
+                <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
+                  <i class="icon icon-mail"></i>
+                  <span class="label">Email</span>
+                </a>
+              </li>
+              {% endif %}
+
+              {% if site.author.twitter_username %}
+              <!-- Twitter -->
+              <li class="navigation__item">
+                <a href="http://twitter.com/{{ site.author.twitter_username }}"
+                  title="@{{ site.author.twitter_username }} on Twitter" target="_blank">
+                  <i class="icon icon-social-twitter"></i>
+                  <span class="label">Twitter</span>
+                </a>
+              </li>
+              {% endif %}
+
               {% if site.author.linkedin_username %}
               <!-- LinkedIn -->
               <li class="navigation__item">
@@ -62,45 +94,13 @@
               </li>
               {% endif %}
 
-              {% if site.author.github_username %}
-              <!-- GitHub -->
-              <li class="navigation__item">
-                <a href="https://www.github.com/{{ site.author.github_username }}"
-                  title="{{ site.author.github_username }} on GitHub" target="_blank">
-                  <i class="icon icon-social-github"></i>
-                  <span class="label">GitHub</span>
-                </a>
-              </li>
-              {% endif %}
-
-              {% if site.author.instagram_username %}
-              <!-- Facebook -->
-              <li class="navigation__item">
-                <a href="https://www.instagram.com/{{ site.author.instagram_username }}"
-                  title="{{ site.author.instagram_username }} on Instagram" target="_blank">
-                  <i class="icon icon-social-instagram"></i>
-                  <span class="label">Instagram</span>
-                </a>
-              </li>
-              {% endif %}
-
-              {% if site.author.email %}
-              <!-- Email -->
-              <li class="navigation__item">
-                <a href="mailto:{{ site.author.email }}" title="Email {{ site.author.email }}" target="_blank">
-                  <i class="icon icon-mail"></i>
-                  <span class="label">Email</span>
-                </a>
-              </li>
-              {% endif %}
-
-              <!-- RSS -->
+              <!-- RSS
               <li class="navigation__item">
                 <a href="{{ site.baseurl }}/feed.xml" title="Subscribe" target="_blank">
                   <i class="icon icon-rss"></i>
                   <span class="label">RSS</span>
                 </a>
-              </li>
+              </li> -->
 
             </ul>
           </nav>
