--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,11 @@ body {
   line-height:500px;
 	margin: auto;
 }
+
+.glow-text{
+  line-height:60px;
+  background: #00adb5;
+  color:#fff;
+  text-align: center;
+  text-shadow: 0 0 0.1em, 0 0 0.3em;
+}
