add google adsense

--- a/themes/PaperMod/layouts/partials/head.html
+++ b/themes/PaperMod/layouts/partials/head.html
@@ -115,6 +115,10 @@
 <link rel="alternate" hreflang="{{ .Lang }}" href="{{ .Permalink }}" />
 {{ end -}}
 
+{{- /* Google AdSense */ -}}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6136142817575418"
+     crossorigin="anonymous"></script>
+
 <noscript>
     <style>
         #theme-toggle,
