add google adsense

--- a/themes/PaperMod/layouts/partials/extend_head.html
+++ b/themes/PaperMod/layouts/partials/extend_head.html
@@ -1,4 +1,9 @@
 {{- /* Head custom content area start */ -}}
 {{- /*     Insert any custom code (web-analytics, resources, etc.) - it will appear in the <head></head> section of every page. */ -}}
 {{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
+
+{{- /* Google AdSense */ -}}
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6136142817575418"
+     crossorigin="anonymous"></script>
+
 {{- /* Head custom content area end */ -}}
